<?xml version="1.0"?>
<package format="3">
  <name>ros_monarch-pro</name>
  <version>1.0.0</version>
  <description>
    ROS wrapper for Monarch Pro Multispectral Camera
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="aleks@fictionlab.pl">Aleksander Szymański</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-setuptools</buildtool_depend>

  <exec_depend>python3-whichcraft</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rosgraph</exec_depend>
  <exec_depend>rosnode</exec_depend>
  <exec_depend>rosservice</exec_depend>
 
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend></exec_depend>
  <exec_depend>std_srvs</exec_depend>


</package>