<?xml version="1.0"?>
<package format="3">
  <name>monarch_ros</name>
  <version>1.0.0</version>
  <description>
    ROS Wrapper for Monarch Pro Multispectral Camera
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>monarch_sdk</build_depend>
  <build_depend>roscpp</build_depend>

  <exec_depend>monarch_sdk</exec_depend>
  <exec_depend>roscpp</exec_depend>

</package>