<?xml version="1.0"?>
<package format="3">
  <name>monarch_sdk</name>
  <version>1.0.0</version>
  <description>
    SDK for Monarch Pro Multispectral Camera
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libopencv-dev</build_depend>
  <build_depend>libpng-dev</build_depend>

  <exec_depend>libopencv-dev</exec_depend>
  <exec_depend>libpng-dev</exec_depend>

</package>